infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
# spec describes deployment config: # of pods in set, selector describes which pods to manage (based off expiration id)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set
      labels:
        app: expiration
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: expiration
          image: rnz269/expiration
          # env is an array where we list env variables, which code within expiration container
          # can access by name, e.g. process.env.MONGO_URI.
