infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-client-depl
# spec describes deployment config: # of pods in set, selector describes which pods to manage (based off ticket-client id)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-client
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set
      labels:
        app: ticket-client
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: ticket-client
          image: rnz269/ticket-client

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-client-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: ticket-client)
  selector:
    app: ticket-client
  ports:
    - name: ticket-client
      protocol: TCP
      port: 3000
      targetPort: 3000
