infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
# spec describes deployment config: # of pods in set, selector describes which pods to manage (based off auth id)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set
      labels:
        app: expiration-redis
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: auth)
  selector:
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
