infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  # pod template section
  template:
    metadata:
      labels:
        app: nats
    # pod spec
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          # if ever we want to specify CLI options when container starts up, we specify them here, in the containers section
          # args is an array of arguments to provide to the primary command that gets executed when a container is built out of our image
          # each separate arg will be separated into different strings in array. we're specifying -p, which accepts an int argument, and we provide arg '4222'.
          args:
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: nats)
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
