infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
# spec describes deployment config: # of pods in set, selector describes which pods to manage (based off payments id)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set
      labels:
        app: payments
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: payments
          image: rnz269/payments
          # env is an array where we list env variables, which code within payments container
          # can access by name, e.g. process.env.MONGO_URI.
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: payments)
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
