infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
# spec describes deployment config: # of pods in set, selector describes which pods to manage (based off tickets id)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set
      labels:
        app: tickets
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: tickets
          image: rnz269/tickets
          # env is an array where we list env variables, which code within tickets container
          # can access by name, e.g. process.env.MONGO_URI.
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: tickets)
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
